generator client {
  provider        = "prisma-client-js"
  previewFeatures = ["postgresqlExtensions"]
}

datasource db {
  provider   = "postgresql"
  extensions = [vector]
}

model Product {
  id            Int         @id @default(autoincrement())
  name          String
  description   String
  primary_image String
  image_urls    String[]
  unit_price    Decimal     @db.Decimal(10, 2)
  currency      String      @default("GBP")
  category      String      @default("Accessories")
  embedding     Unsupported("vector(1536)")?
  cart_items    CartItem[]
  order_items   OrderItem[]

  @@map("products")
}

model Cart {
  id         Int        @id @default(autoincrement())
  session_id String     @unique
  currency   String     @default("GBP")
  items      CartItem[]
  created_at DateTime   @default(now())
  updated_at DateTime   @updatedAt

  @@map("carts")
}

model CartItem {
  id         Int     @id @default(autoincrement())
  cart_id    Int
  product_id Int
  quantity   Int
  cart       Cart    @relation(fields: [cart_id], references: [id], onDelete: Cascade)
  product    Product @relation(fields: [product_id], references: [id])

  @@unique([cart_id, product_id])
  @@map("cart_items")
}

model Order {
  id                Int         @id @default(autoincrement())
  total_price       Decimal     @db.Decimal(10, 2)
  currency          String      @default("GBP")
  status            String      @default("confirmed")
  stripe_payment_id String
  card_last_four    String
  address_name      String
  address_street    String
  address_city      String
  address_postcode  String
  user_id           String
  user              User        @relation(fields: [user_id], references: [id])
  items             OrderItem[]
  created_at        DateTime    @default(now())

  @@map("orders")
}

model OrderItem {
  id         Int     @id @default(autoincrement())
  order_id   Int
  product_id Int
  quantity   Int
  price      Decimal @db.Decimal(10, 2)
  order      Order   @relation(fields: [order_id], references: [id])
  product    Product @relation(fields: [product_id], references: [id])

  @@map("order_items")
}

model User {
  id            String    @id
  name          String
  email         String
  emailVerified Boolean   @default(false)
  image         String?
  addressName     String?
  addressStreet   String?
  addressCity     String?
  addressPostcode String?
  createdAt     DateTime  @default(now())
  updatedAt     DateTime  @updatedAt
  sessions      Session[]
  accounts      Account[]
  orders        Order[]

  @@unique([email])
  @@map("user")
}

model Session {
  id        String   @id
  expiresAt DateTime
  token     String
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  ipAddress String?
  userAgent String?
  userId    String
  user      User     @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([token])
  @@index([userId])
  @@map("auth_sessions")
}

model Account {
  id                    String    @id
  accountId             String
  providerId            String
  userId                String
  user                  User      @relation(fields: [userId], references: [id], onDelete: Cascade)
  accessToken           String?
  refreshToken          String?
  idToken               String?
  accessTokenExpiresAt  DateTime?
  refreshTokenExpiresAt DateTime?
  scope                 String?
  password              String?
  createdAt             DateTime  @default(now())
  updatedAt             DateTime  @updatedAt

  @@index([userId])
  @@map("account")
}

model Verification {
  id         String   @id
  identifier String
  value      String
  expiresAt  DateTime
  createdAt  DateTime @default(now())
  updatedAt  DateTime @updatedAt

  @@index([identifier])
  @@map("verification")
}
